<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".save_secret.SaveSecretFragment">

  <data>
    <variable name="viewModel" type="ii887522.secret_manager.save_secret.SaveSecretViewModel" />
  </data>

  <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/save_secret"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/secretLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/secret_label"
        app:layout_constraintBottom_toTopOf="@+id/secret"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/secretLabelEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPersonName"
          android:text="@={viewModel.secretLabel}"
          tools:ignore="TextContrastCheck" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/secret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/secret"
        app:layout_constraintBottom_toTopOf="@+id/retypeSecret"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secretLabel"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/secretEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:text="@={viewModel.secret}"
          tools:ignore="TextContrastCheck" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/retypeSecret"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/retype_secret"
        app:layout_constraintBottom_toTopOf="@+id/saveSecretButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secret"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/retypeSecretEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:text="@={viewModel.retypeSecret}"
          tools:ignore="TextContrastCheck" />
      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:id="@+id/saveSecretButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:backgroundTint="#404040"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retypeSecret" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>
</layout>
